tests/FSharp.Analyzers.Tests/data/virtualcall/negative/SystemCollectionsGenericList.fs
module C

let list = System.Collections.Generic.List<int>()
let h = Seq.head list
